Battle.net blog post
* Added tags to posts and tag page
* Spruced up home page, title, and about page

--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 layout: home
 author_profile: true
 classes: wide
+header:
+  image: /assets/images/homeImage.jpg
 ---
+
+A collection of CTF writeups, deep dives into how some programs work, pondering, musings, and other projects. <a href="/about/">Read up about me</a>, <a href="/tags/">see what I write about</a>, <a href="/search/">search the blog</a>, or see below for the latest posts.
